# switchiptv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
patches/: borealis-iptv.patch
resources/i18n/pt-BR/: hints.json
resources/xml/activity/: login.xml
resources/xml/cells/: list_cell.xml
source/: main.cpp
source/activity/: catalog_activity.cpp  catalog_activity.hpp  login_activity.cpp  login_activity.hpp  movie_info_activity.cpp  movie_info_activity.hpp  player_activity.cpp  player_activity.hpp  search_activity.cpp  search_activity.hpp  series_episodes_activity.cpp  series_episodes_activity.hpp
source/data/: auth_repository.cpp  auth_repository.hpp  catalog_repository.cpp  catalog_repository.hpp  catalog_types.hpp  http_client.cpp  http_client.hpp  m3u_parser.cpp  m3u_parser.hpp  storage.cpp  storage.hpp  stream_url.cpp  stream_url.hpp  text_utils.cpp  text_utils.hpp  xtream_client.cpp  xtream_client.hpp
source/player/: mpv_player.cpp  mpv_player.hpp
source/ui/: catalog_content_view.cpp  catalog_content_view.hpp  list_cell.cpp  list_cell.hpp  local_list_content_view.cpp  local_list_content_view.hpp  mpv_view.cpp  mpv_view.hpp  poster_row_cell.cpp  poster_row_cell.hpp
